# GrafanaLogAnalyser

./: .gitignore  README.md  docker-compose.yml  grafana-stack-troubleshooting.txt
app_configs/: loki-config.yaml  promtail-config.yaml  telegraf.conf
data/: atm_application_log.json  atm_application_logs_flat.json  atm_hardware_sensor_log.json  atm_hardware_sensor_log_flat.json  gcp_cloud_metrics.csv  kafka_atm_metrics_stream_flat.json  prometheus_metrics.csv  windows_os_metrics.csv
grafana/provisioning/dashboards/: Anomalies-dashboard.json  AnomaliesView2.json  anomaly-detection.json  dashboard.yml
grafana/provisioning/datasources/: datasources.yaml
parser/industrialteamproject_group8/: Dockerfile  README.md  app.py  config.txt
parser/industrialteamproject_group8/analysis/: __init__.py  handler_atm.py  handler_generic.py  handler_kafka.py  handler_prometheus.py  handler_terminal.py  sqlite3_service.py
parser/industrialteamproject_group8/parser/: Cargo.toml  Dockerfile  README.md
parser/industrialteamproject_group8/parser/src/: main.rs  watcher.rs
parser/industrialteamproject_group8/parser/src/db/: mod.rs  schema.rs
parser/industrialteamproject_group8/parser/src/models/: mod.rs
parser/industrialteamproject_group8/parser/src/parsers/: atm_app_log.rs  gcp_metrics.rs  hardware_sensor.rs  kafka_metrics.rs  mod.rs  prometheus_metrics.rs  terminal_handler.rs  windows_metrics.rs
