[package]
name = "atm-parser"
version = "0.1.0"
edition = "2021"  # Changed from 2024

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"       # паралельна обробка
thiserror = "1"      # обробка помилок